# pbg-parsimony

./: .gitignore  README.md  pyproject.toml
.parsimony/cache/: interior-3a7f0ae844b83584.snapshot.json  membrane-709e5fe0fa48eac1.snapshot.json
pbg_parsimony/: __init__.py  api.py  demo.py  engine.py  processes.py  recipe.py  structures.py
pbg_parsimony/composites/: __init__.py  parsimony-demo.composite.yaml
pbg_parsimony/viewer/: index.html  obj-worker.js  viewer.js  vr-helpers.js  vr-helpers.test.js  vr.js
tests/: test_recipe.py  test_ribosomes.py  test_rnaps.py  test_rnas.py
